# apertium-chv-tat

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  apertium-chv-tat.chv-tat.dix  apertium-chv-tat.chv-tat.lrx  apertium-chv-tat.chv-tat.t1x  apertium-chv-tat.chv-tat.t2x  apertium-chv-tat.chv.lexc  apertium-chv-tat.chv.twol  apertium-chv-tat.tat-chv.lrx  apertium-chv-tat.tat-chv.t1x  apertium-chv-tat.tat-chv.t2x  apertium-cv-tt.cv-tt.lrx  apertium-cv-tt.cv-tt.rlx  apertium-cv-tt.tt.lexc  apertium-cv-tt.tt.twol  configure.ac  modes.xml  qa  qa.sh
corpus/: chv-tat-nova.txt  corpus.chv.txt
dev/: NOTES.md  N_dix.txt  N_tat.lexc.txt  sentences.txt  |.*dix.txt  |tat.lexc.txt
dev/clean up/: N_dix.txt  N_tat.lexc.txt
dev/cleanup/: ADJ_dix_B_comm  ADV_dix_B_comm  NP-TOP  NP_ANT_  NP_COG_nonchvsymbols  V_dix  ostatok  some other  temp
test/: chv-tat-t1x-all-expected.txt  chv-tat-t1x-all-gold.txt  chv-tat-t1x.sh  story-chv-tat-chunker-expected.txt  story-chv-tat-chunker2-expected.txt  story-chv-tat-disam-expected.txt  story-chv-tat-generator-expected.txt  story-chv-tat-lex-expected.txt  story-chv-tat-morph-expected.txt  story-chv-tat-postgen-expected.txt  story-chv-tat-postgen-gold.txt  story-chv-tat-pretransfer-expected.txt  story-tat-chv-biltrans-expected.txt  story-tat-chv-chunker-expected.txt  story-tat-chv-chunker2-expected.txt  story-tat-chv-disam-expected.txt  story-tat-chv-generator-expected.txt  story-tat-chv-lex-expected.txt  story-tat-chv-morph-expected.txt  story-tat-chv-postgen-expected.txt  story-tat-chv-postgen-gold.txt  story-tat-chv-pretransfer-expected.txt  tat-chv-t1x-all-expected.txt  tat-chv-t1x-all-gold.txt  tests.json
test-scripts/: chv-tat-corp.test  exprorter.py  qavantest.txt
tests/: all.test  chv-tat-corp.test  config.sh.in  exprorter.py  t1x.test  tat-chv-t1x.test  trimmed-coverage.sh
tests/testvoc/lite/: README  testvoc-summary.chv-tat.txt  testvoc-summary.tat-rus.txt  testvoc.sh  testvoc.sh~
tests/testvoc/standard/: inconsistency-summary.sh  inconsistency.sh  testvoc.sh
text/: CV_ev_test.txt  cv.txt  mars.chv.ref.txt  qtext.tat-chv.ref.txt  qtext.tat-chv.src.txt  qtext.txt  rasskaz.chv.txt  rasskaz.tat.txt  tt.txt
